# trainImage

./: CMakeLists.txt  Distance.cpp  Distance.h  ImageTools.cpp  ImageTools.h  README.md  main.cpp  out_line.cpp  out_line.h  sireye_trainImage.md  tets.cpp
